--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>Talha Asre | Frontend Developer & Mentor</title>
+  <title>Talha Asre | Frontend Developer, Consultant & Mentor</title>
   <meta name="viewport" content="width=device-width, initial-scale=1 maximum-scale=1.0, user-scalable=0" />
   <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
   <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
@@ -23,11 +23,12 @@
   <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
   <meta name="theme-color" content="#ffffff">
   <meta name="description" content="I develop and code pixel perfect sites & apps, and I love what I do." />
+  <meta property="og:site_name" content="Talha Asre">
   <meta property="og:url" content="/" />
   <meta property="og:type" content="website" />
-  <meta property="og:title" content="Talha Asre | Frontend Developer & Mentor" />
+  <meta property="og:title" content="Talha Asre | Frontend Developer, Consultant & Mentor" />
   <meta property="og:description" content="I develop and code pixel perfect sites & apps, and I love what I do." />
-  <meta property="og:image" content="/talha-logo.png" />
+  <meta property="og:image" itemprop="image" content="/talha-logo.png" />
 
   <link href="/your-path-to-fontawesome/css/all.css" rel="stylesheet" />
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
