--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>Talha Asre | Frontend Developer, Consultant & Mentor</title>
+  <title>Talha Asre | Web Developer</title>
   <meta name="viewport" content="width=device-width, initial-scale=1 maximum-scale=1.0, user-scalable=0" />
   <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
   <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
@@ -26,7 +26,7 @@
   <meta property="og:site_name" content="Talha Asre">
   <meta property="og:url" content="/" />
   <meta property="og:type" content="website" />
-  <meta property="og:title" content="Talha Asre | Frontend Developer, Consultant & Mentor" />
+  <meta property="og:title" content="Talha Asre | Web Developer" />
   <meta property="og:description" content="I develop and code pixel perfect sites & apps, and I love what I do." />
   <meta property="og:image" itemprop="image" content="/talha-logo.png" />
 
